# SocketHTTPServer

./: .gitignore  CMakeLists.txt  README.md  build.sh  client.cpp  compiler_flags.txt  main.cpp  main.run  server.run
samples/: CMakeLists.txt  client_db_auth_sample.cpp  server_db_auth_sample.cpp  server_sample.cpp
src/: authentification.hpp  client.hpp  database.hpp  helpers.hpp  http.hpp  logger.hpp  server.hpp  string_helper.hpp  string_like.hpp  user.hpp
src/database/: database.hpp  db.txt  user.hpp
src/http/: cookie.hpp  http.hpp  http_cookie.hpp  http_header.hpp  http_message.hpp  http_protocol.hpp  http_request.hpp  http_request_method.hpp  http_request_param.hpp  http_response.hpp  http_response_status.hpp  rest.hpp
src/http_new/: http.hpp  http_common.hpp  http_header.hpp  http_message.hpp  http_protocol.hpp  http_request.hpp  http_request_method.hpp  http_request_param.hpp  http_request_params.hpp  http_responce.hpp  http_response.hpp  http_response_status.hpp
tests/: CMakeLists.txt  http_request_test.cpp  http_responce_test.cpp  http_response_test.cpp
